lenght, alldiff constraints added